--- a/config/config.json
+++ b/config/config.json
@@ -1,23 +1,24 @@
 {
   "development": {
-    "username": "root",
-    "password": null,
-    "database": "database_development",
+    "username": "postgres",
+    "password": "postgres",
+    "database": "timtransfer",
     "host": "127.0.0.1",
-    "dialect": "mysql"
+    "port": 15432,
+    "dialect": "postgres"
   },
   "test": {
-    "username": "root",
-    "password": null,
-    "database": "database_test",
-    "host": "127.0.0.1",
-    "dialect": "mysql"
+    "username": "postgres",
+    "password": "postgres",
+    "database": "timtransfer",
+    "host": "127.0.0.1:15432",
+    "dialect": "postgres"
   },
   "production": {
-    "username": "root",
-    "password": null,
-    "database": "database_production",
-    "host": "127.0.0.1",
-    "dialect": "mysql"
+    "username": "postgres",
+    "password": "postgres",
+    "database": "timtransfer",
+    "host": "127.0.0.1:15432",
+    "dialect": "postgres"
   }
 }
